# rust-crates

./: Cargo.toml  LICENSE  README.md
src/rabbitmq/: README.md  publisher.rs  subscriber.rs
