[package]
name = "eko2000-rustlib"
version = "1.1.11"
edition = "2024"
description = "RabbitMQ Publisher & Subscriber Library for Rust"
authors = ["eugene-eko2000"]
license = "MIT"

[dependencies]
lapin = "3.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
thiserror = "2.0.17"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11.8"
